--- a/Source/GreatestHacks/CMakeLists.txt
+++ b/Source/GreatestHacks/CMakeLists.txt
@@ -2,4 +2,4 @@
 # CMake's ADD_SUBDIRECTORY only looks for CMakeLists.txt, so we include
 # the real file here
 
-INCLUDE("CMakeLists.Lib.VCoreGreatestHacks.txt")
+#INCLUDE("CMakeLists.Lib.VCoreGreatestHacks.txt")
