--- a/Source/Base/CMakeLists.txt
+++ b/Source/Base/CMakeLists.txt
@@ -2,4 +2,4 @@
 # CMake's ADD_SUBDIRECTORY only looks for CMakeLists.txt, so we include
 # the real file here
 
-INCLUDE("CMakeLists.Lib.VCoreBase.txt")
+INCLUDE("CMakeLists.Lib.VCoREBase.txt")
