--- a/Source/NativeGLUT/CMakeLists.txt
+++ b/Source/NativeGLUT/CMakeLists.txt
@@ -2,4 +2,4 @@
 # CMake's ADD_SUBDIRECTORY only looks for CMakeLists.txt, so we include
 # the real file here
 
-INCLUDE("CMakeLists.Lib.VCoreNativeGLUT.txt")
+INCLUDE("CMakeLists.Lib.VCoRENativeGLUT.txt")
