--- a/Source/Viewer/CMakeLists.txt
+++ b/Source/Viewer/CMakeLists.txt
@@ -2,4 +2,4 @@
 # CMake's ADD_SUBDIRECTORY only looks for CMakeLists.txt, so we include
 # the real file here
 
-INCLUDE("CMakeLists.Lib.VCoreViewer.txt")
+INCLUDE("CMakeLists.Lib.VCoREViewer.txt")
